--- a/link_41399.css
+++ b/link_41399.css
@@ -11,6 +11,14 @@ body:has(main .tabs) {
     --user-leash-bg:   rgba(245, 40, 145, 0.47);
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;amp;display=swap');
+html {
+    font-family: var(--sans-font);
+}
+code, kbd, pre, pre span, samp {
+    font-family: var(--mono-font);
+}
+
 main:has(.tabs) {
   margin: -1.6rem -1rem;
   padding: 1.6rem 1rem;
@@ -101,7 +109,7 @@ body:has(main .tabs) .mascot {
   content: url("https://iili.io/KWsCtTb.png");
   margin: -3px;
   clip-path: inset(33px 0 0 0) !important;
-  bottom: -23px !important;
+  bottom: -29px !important;
 }
 
 body:has(main .tabs) .perverted {
@@ -114,13 +122,13 @@ body:has(main .tabs) header h1 .show-mobile {
 }
 
 body:has(main .tabs) header h1 .show-mobile::before {
-  content: "DT";
+  content: "ST";
   font-size: 1.5rem;
   visibility: visible;
 }
 
 body:has(main .tabs) header h1 .show-desktop::before {
-  content: "Deertaker";
+  content: "Sylvtaker";
   font-size: 3rem;
   visibility: visible;
 }
@@ -168,5 +176,6 @@ body:has(main .tabs) .hang div {
   z-index: 2;
 
 }
+
 
 
