--- a/link_9111.css
+++ b/link_9111.css
@@ -31,6 +31,13 @@ turbo-frame#link_9111 {
   --accent-bg: var(--bg);
 }
 
+turbo-frame#link_9111 div.link { 
+    width: auto; 
+    height: 380px; 
+    justify-content: center; 
+    align-items: center; 
+}
+
 turbo-frame#link_9111 h3 {
   text-shadow:
     -2px -2px 0 var(--bg),
@@ -174,6 +181,7 @@ body:has(main .tabs) .hang div {
     padding: 0.7rem;
     box-shadow: inset 0 0 0 2px var(--accent);
 }
+
 
 
 
