--- a/link_51237.css
+++ b/link_51237.css
@@ -38,6 +38,11 @@ turbo-frame#link_51237 div.link {
     align-items: center; 
 }
 
+turbo-frame#link_51237 div.link--terms { 
+    width: auto; 
+    height: 240px; 
+}
+
 turbo-frame#link_51237 h3 {
   text-shadow:
     -2px -2px 0 var(--bg),
@@ -181,6 +186,7 @@ body:has(main .tabs) .hang div {
     padding: 0.7rem;
     box-shadow: inset 0 0 0 2px var(--accent);
 }
+
 
 
 
