--- a/link_22282.css
+++ b/link_22282.css
@@ -31,6 +31,11 @@ turbo-frame#link_22282 {
   --accent-bg: var(--bg);
 }
 
+turbo-frame#link_22282 div.link--terms { 
+    width: auto; 
+    height: 240px; 
+}
+
 turbo-frame#link_22282 div.link { 
     width: auto; 
     height: 380px; 
@@ -181,6 +186,7 @@ body:has(main .tabs) .hang div {
     padding: 0.7rem;
     box-shadow: inset 0 0 0 2px var(--accent);
 }
+
 
 
 
