--- a/link_22282.css
+++ b/link_22282.css
@@ -23,7 +23,7 @@ body:has(main .tabs) .header__age-warning {
 }
 
 body:has(main .tabs) .header__age-warning::after {
-  content: '💗 Remember to hydrate and goon to Sylveon ✨';
+  content: '💗 Bet you like to goon, don't you~? ✨';
   font-size: 0.9rem;
 }
 
@@ -127,7 +127,7 @@ body:has(main .tabs) header h1 .show-mobile::before {
 }
 
 body:has(main .tabs) header h1 .show-desktop::before {
-  content: "Sylvtaker";
+  content: "Sheebtaker";
   font-size: 3rem;
   visibility: visible;
   font-family: Audiowide;
@@ -184,6 +184,7 @@ body:has(main .tabs) .hang div {
     padding: 0.7rem;
     box-shadow: inset 0 0 0 2px var(--accent);
 }
+
 
 
 
