--- a/link_20164.css
+++ b/link_20164.css
@@ -23,7 +23,7 @@ body:has(main .tabs) .header__age-warning {
 }
 
 body:has(main .tabs) .header__age-warning::after {
-  content: '💗 Bet you like to goon, don't you~? ✨';
+  content: '💗 Bet you like to goon, huh~? ✨';
   font-size: 0.9rem;
 }
 
@@ -184,6 +184,7 @@ body:has(main .tabs) .hang div {
     padding: 0.7rem;
     box-shadow: inset 0 0 0 2px var(--accent);
 }
+
 
 
 
