--- a/link_22282.css
+++ b/link_22282.css
@@ -23,7 +23,7 @@ body:has(main .tabs) .header__age-warning {
 }
 
 body:has(main .tabs) .header__age-warning::after {
-  content: '💗 Bet you like to goon, don't you~? ✨';
+  content: '💗 Bet you like to goon, huh~? ✨';
   font-size: 0.9rem;
 }
 
@@ -106,7 +106,7 @@ turbo-frame#link_22282 .link--theme {
 body:has(main .tabs) .mascot {
     content: url(https://iili.io/fNrqa8g.png);
     margin: -3px;
-    clip-path: inset(22px 0 0 0) !important;
+    clip-path: inset(22px 0 37px 0) !important;
     bottom: -62px !important
 }
 
@@ -184,6 +184,7 @@ body:has(main .tabs) .hang div {
     padding: 0.7rem;
     box-shadow: inset 0 0 0 2px var(--accent);
 }
+
 
 
 
