--- a/link_8900.css
+++ b/link_8900.css
@@ -23,7 +23,7 @@ body:has(main .tabs) .header__age-warning {
 }
 
 body:has(main .tabs) .header__age-warning::after {
-  content: '💗 Remember to hydrate and goon to Sylveon ✨';
+  content: '💗 Bet you like to goon, huh~? ✨';
   font-size: 0.9rem;
 }
 
@@ -106,7 +106,7 @@ turbo-frame#link_8900 .link--theme {
 body:has(main .tabs) .mascot {
     content: url(https://iili.io/fNrqa8g.png);
     margin: -3px;
-    clip-path: inset(22px 0 0 0) !important;
+    clip-path: inset(22px 0 37px 0) !important;
     bottom: -62px !important
 }
 
@@ -127,7 +127,7 @@ body:has(main .tabs) header h1 .show-mobile::before {
 }
 
 body:has(main .tabs) header h1 .show-desktop::before {
-  content: "Sylvtaker";
+  content: "Sheebtaker";
   font-size: 3rem;
   visibility: visible;
   font-family: Audiowide;
@@ -184,6 +184,7 @@ body:has(main .tabs) .hang div {
     padding: 0.7rem;
     box-shadow: inset 0 0 0 2px var(--accent);
 }
+
 
 
 
